@@ -540,8 +540,8 @@ fprintf(stderr, " '%s'\n", Tmp_win->name);
       old_wmhints_flags = Tmp_win->wmhints->flags;
       XFree ((char *) Tmp_win->wmhints);
     }
-    Tmp_win->wmhints = XGetWMHints(dpy, Event.xany.window);
-    if(Tmp_win->wmhints == NULL)
+    setup_wm_hints(Tmp_win);
+    if (Tmp_win->wmhints == NULL)
     {
       return;
     }
@@ -1803,6 +1803,18 @@ void HandleEnterNotify(void)
   {
     return;
   }
+  else if (ewp->mode == NotifyNormal)
+  {
+    if (ewp->detail == NotifyNonlinearVirtual && ewp->focus == False &&
+	ewp->subwindow != None)
+    {
+      /* This takes care of some buggy apps that forget that one of their
+       * dialog subwindows has the focus after popping up a selection list
+       * several times (ddd, netscape). I'm not convinced that this does not
+       * break something else. */
+      refresh_focus(Tmp_win);
+    }
+  }
   else if (ewp->mode == NotifyUngrab)
   {
     /* Ignore events generated by grabbing or ungrabbing the pointer.  However,
@@ -1814,9 +1826,18 @@ void HandleEnterNotify(void)
       is_initial_ungrab_pending = False;
       xcrossing_last_grab_window = NULL;
     }
-    else if (Tmp_win && Tmp_win == xcrossing_last_grab_window)
+    else
     {
-      return;
+      if (ewp->detail == NotifyNonlinearVirtual && ewp->focus == False &&
+	  ewp->subwindow != None)
+      {
+	/* see comment above */
+	refresh_focus(Tmp_win);
+      }
+      if (Tmp_win && Tmp_win == xcrossing_last_grab_window)
+      {
+	return;
+      }
     }
   }
   if (Tmp_win)
