@@ -53,5 +53,7 @@ void set_focus_window(FvwmWindow *fw);
 FvwmWindow *get_last_screen_focus_window(void);
 void set_last_screen_focus_window(FvwmWindow *fw);
 void update_last_screen_focus_window(FvwmWindow *fw);
+void set_focus_model(FvwmWindow *fw);
+void refresh_focus(FvwmWindow *fw);
 
 #endif /* _FOCUS_ */
