@@ -7,6 +7,9 @@ Changes in stable release 2.4.5 (not released yet)
 * Fixed problem with pointer warping to another screen on a dual
   head setup.
 
+* Fixed a problem with the focus in internal Ddd and Netscape
+  windows.
+
 Changes in stable release 2.4.4 (16-Dec-2001)
 
 * Minor title drawing fixes.
