@@ -1,3 +1,14 @@
+2002-01-01  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/add_window.c (FetchWmProtocols):
+	(setup_wm_hints):
+	* fvwm/fvwm.h (FvwmWindow):
+	* fvwm/events.c (HandleEnterNotify):
+	(HandlePropertyNotify):
+	* fvwm/focus.c (refresh_focus):
+	(set_focus_model):
+	fixed focus problems with netscape and ddd
+
 2001-12-31  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/module_interface.c (ExecuteModuleCommand):
